# HackRx-6.0

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: agent.py  main.py  supabase.sql  vector_store.py  vectore_store.py
app/api/: hackrx.py
app/contextual retrieval/: .env.example  chunker.py  context_appender.py  embedder.py  example.md  pipeline.py  vector_store.py
app/core/: settings.py
app/db/: mongo.py
app/knowledge graphs/: .env.example  super-basic-lightrag.py
app/services/: agent.py  chunker.py  rag.py  round_robin.py  vector_store_service.py
app/utils/: __init__.py  extract_text.py  prompts.py
data/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
