[project]
name = "hackrx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pydantic-ai>=0.4.7",
    "graphiti-core[google-genai]>=0.3.21",
    "google-generativeai>=0.8.5",
    "lightrag-hku[api]>=1.4.4",
    "pymupdf>=1.26.3",
]
